--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Aquí Nomás — DEMO inteligente (local images)</title>
+<title>Aquí Nomás — DEMO inteligente</title>
 <style>
 :root{--pri:#0b5cff;}
 body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;margin:0;background:#f7f9fb;color:#0b1220}
@@ -42,11 +42,11 @@ h1{font-size:22px;margin:0 0 12px}
   <div class="box">
     <div class="row">
       <input id="qall" class="input" placeholder="Ej: 'almorzar en el centro', 'comprar libros', 'comer helados en microcentro'"/>
-      <button id="micBtn" class="btn mic">🎤</button>
+      <button id="micBtn" class="btn mic" title="Dictar por voz">🎤</button>
       <button id="goBtn" class="btn">Buscar</button>
       <button id="clearBtn" class="btn ghost">Limpiar</button>
-      <button id="locBtn" class="btn secondary">📍 Cerca</button>
-      <button id="refreshBtn" class="btn">Actualizar</button>
+      <button id="locBtn" class="btn secondary" title="Usar mi ubicación">📍 Cerca</button>
+      <button id="refreshBtn" class="btn">Actualizar datos</button>
     </div>
     <div class="row" style="margin-top:10px">
       <label class="switch"><input id="autoChk" type="checkbox"/> Auto (15s)</label>
@@ -70,16 +70,51 @@ const GPS_HINT=document.getElementById("gpsHint");
 const INTENT_HINT=document.getElementById("intentHint");
 SRC.textContent="Fuente CSV: "+CSV_URL;
 
+// sinónimos de barrios (en texto normalizado)
+const BARRIO_SYNONYMS = {
+  "centro":"microcentro",
+  "micro centro":"microcentro",
+  "micro-centro":"microcentro",
+  "zona centrica":"microcentro",
+  "zona centrica de buenos aires":"microcentro",
+  "obelisco":"microcentro",
+  "9 de julio":"microcentro",
+  "palermo soho":"palermo",
+  "palermo hollywood":"palermo"
+};
+
 let DATA=[],USER_POS=null,LOADED=false,refreshTimer=null;
 
 function showStatus(m){STATUS.style.display=m?"block":"none";STATUS.textContent=m||"";}
 function showError(m){ERR.style.display=m?"block":"none";ERR.textContent=m||"";}
 function hideIntent(){INTENT_HINT.style.display="none";INTENT_HINT.textContent="";}
+
 function removeDiacritics(s){return String(s||"").normalize("NFD").replace(/[\u0300-\u036f]/g,"");}
 function norm(s){return removeDiacritics(String(s||"").toLowerCase()).replace(/[^a-z0-9\s]/g," ").replace(/\s+/g," ").trim();}
-function parseCSV(t){const r=t.trim().split(/\r?\n/).map(l=>l.split(/,(?=(?:[^"]*"[^"]*")*[^"]*$)/).map(c=>c.replace(/^"|"$/g,"")));const h=r.shift().map(x=>x.trim().toLowerCase().replace(/\s+/g,"_"));return r.map(l=>Object.fromEntries(h.map((x,i)=>[x,l[i]||""])));}
-function parseCoord(v){if(!v)return NaN;let s=String(v).replace(",","."),n=parseFloat(s);if(!isFinite(n)){const d=s.replace(/[^0-9]/g,"");if(d.length>=7)n=parseInt(d,10)/1e6;}if(Math.abs(n)>180)n/=1e6;return n;}
-function hav(a,b){const R=6371,toRad=x=>x*Math.PI/180;const dLat=toRad(b.lat-a.lat),dLng=toRad(b.lng-a.lng);const s1=Math.sin(dLat/2),s2=Math.sin(dLng/2);const A=s1*s1+Math.cos(toRad(a.lat))*Math.cos(toRad(b.lat))*s2*s2;return 2*R*Math.asin(Math.min(1,Math.sqrt(A)));}
+function parseCSV(t){
+  const r=t.trim().split(/\r?\n/).map(
+    l=>l.split(/,(?=(?:[^"]*"[^"]*")*[^"]*$)/).map(c=>c.replace(/^"|"$/g,""))
+  );
+  const h=r.shift().map(x=>x.trim().toLowerCase().replace(/\s+/g,"_"));
+  return r.map(l=>Object.fromEntries(h.map((x,i)=>[x,l[i]||""])));
+}
+function parseCoord(v){
+  if(!v)return NaN;
+  let s=String(v).replace(",","."),n=parseFloat(s);
+  if(!isFinite(n)){
+    const d=s.replace(/[^0-9]/g,"");
+    if(d.length>=7)n=parseInt(d,10)/1e6;
+  }
+  if(Math.abs(n)>180)n/=1e6;
+  return n;
+}
+function hav(a,b){
+  const R=6371,toRad=x=>x*Math.PI/180;
+  const dLat=toRad(b.lat-a.lat),dLng=toRad(b.lng-a.lng);
+  const s1=Math.sin(dLat/2),s2=Math.sin(dLng/2);
+  const A=s1*s1+Math.cos(toRad(a.lat))*Math.cos(toRad(b.lat))*s2*s2;
+  return 2*R*Math.asin(Math.min(1,Math.sqrt(A)));
+}
 
 async function loadCSV(){
   try{
@@ -96,92 +131,255 @@ async function loadCSV(){
       const dir=row.direccion||"";
       const kw=row.keywords||"";
       const lat=parseCoord(row.lat),lng=parseCoord(row.lng);
-      const nombreNorm=norm(nombre),rubroNorm=norm(rubro),barrioNorm=norm(barrio),kwNorm=norm(kw),textNorm=norm([nombre,rubro,barrio,dir,kw].join(" "));
+      const nombreNorm=norm(nombre),
+            rubroNorm=norm(rubro),
+            barrioNorm=norm(barrio),
+            kwNorm=norm(kw),
+            textNorm=norm([nombre,rubro,barrio,dir,kw].join(" "));
       if(barrioNorm)barrios.add(barrioNorm);
-      return{row,nombre,rubro,barrio,dir,kw,lat,lng,nombreNorm,rubroNorm,barrioNorm,kwNorm,textNorm};
+      return {row,nombre,rubro,barrio,dir,kw,lat,lng,nombreNorm,rubroNorm,barrioNorm,kwNorm,textNorm};
     });
-    window._BARRIOS=Array.from(barrios);
+    window._BARRIOS = Array.from(barrios);
     LOADED=true;
     showStatus("CSV cargado OK · "+DATA.length+" filas.");
     TSH.textContent="Actualizado: "+new Date().toLocaleTimeString();
-  }catch(e){LOADED=false;showStatus("");showError("Error CSV: "+(e.message||e));}
+  }catch(e){
+    LOADED=false;
+    showStatus("");
+    showError("Error CSV: "+(e.message||e));
+  }
 }
 
-const VERBOS=["comer","almorzar","comprar","buscar","necesito","arreglar","quiero","tomar"];
-function detectBarrio(q){if(!window._BARRIOS)return"";if(q.includes("centro")&&!q.includes("microcentro")&&window._BARRIOS.includes("microcentro"))return"microcentro";for(const b of window._BARRIOS){if(q.includes(b))return b;}return"";}
-function detectLocal(q){let match=null;for(const d of DATA){if(!d.nombreNorm)continue;if(q.includes(d.nombreNorm)){if(match&&match!==d)return null;match=d;}}return match;}
-function tokenVariants(t){const v=new Set([t]);if(t.endsWith("s")&&t.length>3)v.add(t.slice(0,-1));if(t.endsWith("es")&&t.length>4)v.add(t.slice(0,-2));return Array.from(v);}
-function isBarrioToken(t){if(!window._BARRIOS)return false;return window._BARRIOS.includes(t);}
-function scoreRow(d,toks,hasVerb){let s=0;for(const t of toks){const vars=tokenVariants(t);for(const v of vars){if(d.nombreNorm.includes(v))s+=4;if(d.rubroNorm.includes(v))s+=hasVerb?7:3;if(d.kwNorm.includes(v))s+=hasVerb?6:2;if(d.textNorm.includes(v))s+=1;}}return s;}
+// verbos de intención
+const VERBOS=["comer","almorzar","cenar","desayunar","comprar","buscar","necesito","arreglar","quiero","tomar","ir","ir a","conseguir","encontrar"];
+
+function detectBarrio(q){
+  if(!window._BARRIOS) return "";
+  const qnorm = q; // ya viene normalizado
+
+  // primero sinónimos
+  for(const [k,target] of Object.entries(BARRIO_SYNONYMS)){
+    if(qnorm.includes(k) && window._BARRIOS.includes(target)){
+      return target;
+    }
+  }
+  // luego coincidencia directa con valores del sheet
+  for(const b of window._BARRIOS){
+    if(qnorm.includes(b)) return b;
+  }
+  return "";
+}
+
+function isBarrioToken(t){
+  if(!window._BARRIOS) return false;
+  if(window._BARRIOS.includes(t)) return true;
+  if(BARRIO_SYNONYMS[t] && window._BARRIOS.includes(BARRIO_SYNONYMS[t])) return true;
+  return false;
+}
+
+function detectLocal(q){
+  let match=null;
+  for(const d of DATA){
+    if(!d.nombreNorm) continue;
+    if(q.includes(d.nombreNorm)){
+      if(match && match!==d) return null; // más de uno: no fijamos
+      match=d;
+    }
+  }
+  return match;
+}
+
+function tokenVariants(t){
+  const v=new Set([t]);
+  if(t.endsWith("s") && t.length>3) v.add(t.slice(0,-1));
+  if(t.endsWith("es") && t.length>4) v.add(t.slice(0,-2));
+  return Array.from(v);
+}
+
+function scoreRow(d,toks,hasVerb){
+  let s=0;
+  for(const t of toks){
+    const vars=tokenVariants(t);
+    for(const v of vars){
+      if(d.nombreNorm.includes(v)) s+=4;
+      if(d.rubroNorm.includes(v)) s+=hasVerb?7:3;
+      if(d.kwNorm.includes(v))    s+=hasVerb?6:2;
+      if(d.textNorm.includes(v))  s+=1;
+    }
+  }
+  return s;
+}
 
 function buscar(fromText){
   hideIntent();
   if(!LOADED){showStatus("Esperá que cargue el CSV…");return;}
-  const raw=(typeof fromText==="string"?fromText:document.getElementById('qall').value).trim();
+
+  const raw = (typeof fromText==="string" ? fromText : document.getElementById('qall').value).trim();
   if(!raw){render([],"Escribí o dictá algo.");return;}
-  const q=norm(raw),hasVerb=VERBOS.some(v=>q.includes(v));
-  const local=detectLocal(q);
+
+  const q = norm(raw);
+  const hasVerb = VERBOS.some(v=>q.includes(v));
+
+  // 1) ¿menciona directamente un local?
+  const local = detectLocal(q);
   if(local){
-    const dist=(USER_POS&&isFinite(local.lat)&&isFinite(local.lng))?hav(USER_POS,{lat:local.lat,lng:local.lng}):null;
+    const dist = (USER_POS && isFinite(local.lat) && isFinite(local.lng))
+      ? hav(USER_POS,{lat:local.lat,lng:local.lng})
+      : null;
     INTENT_HINT.style.display="block";
     INTENT_HINT.textContent=`🔎 Intención: "${raw}" → local: ${local.nombre}`;
-    render([{row:local.row,dist}],`Mostrando: ${local.nombre}`);return;
+    render([{row:local.row,dist}],`Mostrando: ${local.nombre}`);
+    return;
   }
-  const barrioTerm=detectBarrio(q);
-  const allTokens=q.split(/\s+/).filter(t=>t.length>2);
-  const toksNoVerbos=allTokens.filter(t=>!VERBOS.includes(t));
-  if(!toksNoVerbos.length){render([],"Probá con alguna palabra clave, ej: 'helados', 'libros', 'artículos para el hogar'.");return;}
-  const scoringTokensRaw=hasVerb?toksNoVerbos.filter(t=>!isBarrioToken(t)):toksNoVerbos.slice();
-  const scoringTokens=scoringTokensRaw.length?scoringTokensRaw:toksNoVerbos;
+
+  // 2) detectar barrio (incluye sinónimos)
+  const barrioTerm = detectBarrio(q);
+
+  // tokens
+  const allTokens = q.split(/\s+/).filter(t=>t.length>2);
+
+  // tokens de contenido (sin verbos ni barrios)
+  const contentTokens = allTokens.filter(t=>!VERBOS.includes(t) && !isBarrioToken(t));
+
+  // si no hay ni contenido ni barrio, no hay con qué trabajar
+  if(!contentTokens.length && !barrioTerm){
+    render([],"Probá con alguna palabra clave, ej: 'helados', 'libros', 'artículos para el hogar'.");
+    return;
+  }
+
+  // tokens para puntuar:
+  // - si hay contenido → usamos contenido
+  // - si no hay contenido pero sí barrio → usamos todo menos barrios (incluye verbos, ej. 'almorzar')
+  const scoringTokens = contentTokens.length
+    ? contentTokens
+    : allTokens.filter(t=>!isBarrioToken(t)); // p.ej. 'almorzar' en 'almorzar en el centro'
+
+  const requireStrong = hasVerb && contentTokens.length>0; 
+  // si solo hay verbo + barrio (ej. 'almorzar en el centro'), NO exigimos strong match
+
   const out=[];
   for(const d of DATA){
-    if(barrioTerm&&d.barrioNorm&&!d.barrioNorm.includes(barrioTerm))continue;
-    const sc=scoreRow(d,scoringTokens,hasVerb);
-    if(sc<=0)continue;
-    if(hasVerb){
+    // filtro por barrio si se detectó
+    if(barrioTerm && d.barrioNorm && !d.barrioNorm.includes(barrioTerm)) continue;
+
+    const sc = scoreRow(d, scoringTokens, hasVerb);
+    if(sc<=0) continue;
+
+    if(requireStrong){
+      // pedimos que al menos un token de contenido matchee rubro o keywords
       let strong=false;
-      for(const t of scoringTokens){for(const v of tokenVariants(t)){if(d.rubroNorm.includes(v)||d.kwNorm.includes(v)){strong=true;break;}}
-      if(strong)break;}
-      if(!strong)continue;
+      for(const t of contentTokens){
+        for(const v of tokenVariants(t)){
+          if(d.rubroNorm.includes(v) || d.kwNorm.includes(v)){
+            strong=true;
+            break;
+          }
+        }
+        if(strong) break;
+      }
+      if(!strong) continue;
     }
-    const dist=(USER_POS&&isFinite(d.lat)&&isFinite(d.lng))?hav(USER_POS,{lat:d.lat,lng:d.lng}):null;
+
+    const dist = (USER_POS && isFinite(d.lat) && isFinite(d.lng))
+      ? hav(USER_POS,{lat:d.lat,lng:d.lng})
+      : null;
+
     out.push({row:d.row,dist,score:sc,nombre:d.nombre});
   }
-  out.sort((a,b)=>{if(a.dist!=null&&b.dist!=null&&a.dist!==b.dist)return a.dist-b.dist;if(b.score!==a.score)return b.score-a.score;const na=a.nombre||"",nb=b.nombre||"";return na.localeCompare(nb);});
+
+  out.sort((a,b)=>{
+    if(a.dist!=null && b.dist!=null && a.dist!==b.dist) return a.dist-b.dist;
+    if(b.score!==a.score) return b.score-a.score;
+    const na=a.nombre||"",nb=b.nombre||"";
+    return na.localeCompare(nb);
+  });
+
+  if(out.length){
+    let detalle=[];
+    if(hasVerb) detalle.push("intención detectada");
+    if(barrioTerm) detalle.push("zona: "+barrioTerm);
+    if(scoringTokens.length) detalle.push("claves: "+scoringTokens.join(", "));
+    INTENT_HINT.style.display="block";
+    INTENT_HINT.textContent=`🔎 Intención: "${raw}"${detalle.length?" → "+detalle.join(" · "):""}`;
+  }
+
   render(out);
 }
 
 function buscarCerca(){
   hideIntent();
   if(!LOADED){showStatus("Esperá que cargue el CSV…");return;}
+
   function run(){
-    const list=[];for(const d of DATA){if(!isFinite(d.lat)||!isFinite(d.lng))continue;const dist=hav(USER_POS,{lat:d.lat,lng:d.lng});list.push({row:d.row,dist});}
+    const list=[];
+    for(const d of DATA){
+      if(!isFinite(d.lat)||!isFinite(d.lng)) continue;
+      const dist = hav(USER_POS,{lat:d.lat,lng:d.lng});
+      list.push({row:d.row,dist});
+    }
     list.sort((a,b)=>a.dist-b.dist);
-    let radius=1.5;let inside=list.filter(o=>o.dist<=radius);if(inside.length<3){radius=3.0;inside=list.filter(o=>o.dist<=radius);}
-    GPS_HINT.style.display='block';GPS_HINT.textContent=`📍 Mostrando ≤ ${radius.toFixed(1)} km · ${inside.length} resultados`;
+
+    let radius=1.5;
+    let inside=list.filter(o=>o.dist<=radius);
+    if(inside.length<3){
+      radius=3.0;
+      inside=list.filter(o=>o.dist<=radius);
+    }
+
+    GPS_HINT.style.display='block';
+    GPS_HINT.textContent=`📍 Mostrando ≤ ${radius.toFixed(1)} km · ${inside.length} resultados`;
     render(inside);
   }
+
   if(USER_POS){run();return;}
-  if(!navigator.geolocation){USER_POS={lat:-34.6037,lng:-58.3816};GPS_HINT.style.display='block';GPS_HINT.textContent="📍 Sin GPS, usando centro.";run();return;}
+
+  if(!navigator.geolocation){
+    USER_POS={lat:-34.6037,lng:-58.3816};
+    GPS_HINT.style.display='block';
+    GPS_HINT.textContent="📍 Sin GPS, usando centro.";
+    run();
+    return;
+  }
+
   showStatus("Buscando tu ubicación…");
   navigator.geolocation.getCurrentPosition(
-    p=>{USER_POS={lat:p.coords.latitude,lng:p.coords.longitude};showStatus("");GPS_HINT.style.display='block';GPS_HINT.textContent="📍 Ubicación detectada.";run();},
-    ()=>{USER_POS={lat:-34.6037,lng:-58.3816};showStatus("");GPS_HINT.style.display='block';GPS_HINT.textContent="📍 Sin permiso, usando centro.";run();},
+    p=>{
+      USER_POS={lat:p.coords.latitude,lng:p.coords.longitude};
+      showStatus("");
+      GPS_HINT.style.display='block';
+      GPS_HINT.textContent="📍 Ubicación detectada.";
+      run();
+    },
+    ()=>{
+      USER_POS={lat:-34.6037,lng:-58.3816};
+      showStatus("");
+      GPS_HINT.style.display='block';
+      GPS_HINT.textContent="📍 Sin permiso, usando centro.";
+      run();
+    },
     {enableHighAccuracy:true,timeout:7000}
   );
 }
 
 function render(list,msg){
   const box=document.getElementById('results');
-  if(!list||!list.length){box.innerHTML=`<div class="tiny">${msg||"Sin resultados."}</div>`;return;}
+  if(!list||!list.length){
+    box.innerHTML=`<div class="tiny">${msg||"Sin resultados."}</div>`;
+    return;
+  }
   box.innerHTML=list.map(o=>{
     const r=o.row;
     const maps=`https://www.google.com/maps/search/?api=1&query=${encodeURIComponent((r.direccion||"")+" "+(r.barrio||""))}`;
     const dist=(typeof o.dist==="number")?`<div class="meta">≈ ${o.dist.toFixed(2)} km</div>`:"";
     const imgSrc=r.imagen_url?r.imagen_url.trim():"";
-    const finalSrc=imgSrc.startsWith("http")?imgSrc:"./"+imgSrc;
+    const finalSrc=imgSrc
+      ? (imgSrc.startsWith("http")?imgSrc:"./"+imgSrc)
+      : "";
+    const imgTag = finalSrc
+      ? `<img src="${finalSrc}" onerror="this.style.display='none'">`
+      : "";
     return `<div class="card">
-      <img src="${finalSrc}" onerror="this.style.display='none'">
+      ${imgTag}
       <div>
         <div class="title">${r.nombre_local||"(sin nombre)"} — <span>${r.rubro||""}</span></div>
         <div>${r.direccion||""} ${r.barrio?`(${r.barrio})`:""}</div>
@@ -192,13 +390,62 @@ function render(list,msg){
   }).join("");
 }
 
+// eventos UI
 document.getElementById('goBtn').onclick=()=>buscar();
-document.getElementById('clearBtn').onclick=()=>{document.getElementById('qall').value='';document.getElementById('results').innerHTML='';GPS_HINT.style.display='none';hideIntent();showStatus("");showError("");};
+document.getElementById('clearBtn').onclick=()=>{
+  document.getElementById('qall').value='';
+  document.getElementById('results').innerHTML='';
+  GPS_HINT.style.display='none';
+  hideIntent();
+  showStatus("");
+  showError("");
+};
 document.getElementById('locBtn').onclick=buscarCerca;
 document.getElementById('refreshBtn').onclick=loadCSV;
-document.getElementById('autoChk').onchange=e=>{if(e.target.checked){loadCSV();refreshTimer=setInterval(loadCSV,15000);}else{clearInterval(refreshTimer);}};
-document.getElementById('qall').addEventListener('keydown',e=>{if(e.key==="Enter"){e.preventDefault();buscar();}});
-(function(){const b=document.getElementById('micBtn');const SR=window.SpeechRecognition||window.webkitSpeechRecognition;if(!SR){b.disabled=true;b.innerText='🎤—';return;}const rec=new SR();rec.lang='es-AR';rec.continuous=false;rec.interimResults=false;let active=false;b.onclick=()=>{if(active)return;try{rec.start();active=true;b.textContent='⏺️';showStatus("Escuchando…");hideIntent();}catch{}};rec.onresult=e=>{const t=e.results[0][0].transcript||'';const limpio=t.trim();document.getElementById('qall').value=limpio;showStatus("Voz: "+limpio);buscar(limpio);};rec.onerror=()=>{showStatus("Error al escuchar.");};rec.onend=()=>{active=false;b.textContent='🎤';};})();
+document.getElementById('autoChk').onchange=e=>{
+  if(e.target.checked){
+    loadCSV();
+    refreshTimer=setInterval(loadCSV,15000);
+  }else{
+    clearInterval(refreshTimer);
+  }
+};
+document.getElementById('qall').addEventListener('keydown',e=>{
+  if(e.key==="Enter"){e.preventDefault();buscar();}
+});
+
+// voz
+(function(){
+  const b=document.getElementById('micBtn');
+  const SR=window.SpeechRecognition||window.webkitSpeechRecognition;
+  if(!SR){b.disabled=true;b.innerText='🎤—';return;}
+  const rec=new SR();
+  rec.lang='es-AR';
+  rec.continuous=false;
+  rec.interimResults=false;
+  let active=false;
+
+  b.onclick=()=>{
+    if(active)return;
+    try{
+      rec.start();
+      active=true;
+      b.textContent='⏺️';
+      showStatus("Escuchando…");
+      hideIntent();
+    }catch{}
+  };
+  rec.onresult=e=>{
+    const t=e.results[0][0].transcript||'';
+    const limpio=t.trim();
+    document.getElementById('qall').value=limpio;
+    showStatus("Voz: "+limpio);
+    buscar(limpio);
+  };
+  rec.onerror=()=>{showStatus("Error al escuchar.");};
+  rec.onend=()=>{active=false;b.textContent='🎤';};
+})();
+
 loadCSV();
 </script>
 </body>
